// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Carousel/Icon should render the next icon 1`] = `
".a {
  display: inline-block;
}
.b {
  width: 2rem;
}
.c {
  height: 2rem;
}
.d {
  background-repeat: no-repeat;
}
.e {
  background-position: 50%;
}
.f {
  background-size: 100% 100%;
}
.g {
  -webkit-background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
}


<span
  data-testid="carousel-icon"
  class="a b c d e f g carousel-control-next-icon"
  aria-hidden="true"
></span
><span style="visibility: hidden" class="visually-hidden">Foobar</span>;
"
`;

exports[`components/Carousel/Icon should render the prev icon 1`] = `
".a {
  display: inline-block;
}
.b {
  width: 2rem;
}
.c {
  height: 2rem;
}
.d {
  background-repeat: no-repeat;
}
.e {
  background-position: 50%;
}
.f {
  background-size: 100% 100%;
}
.g {
  -webkit-background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
}


<span
  data-testid="carousel-icon"
  class="a b c d e f g carousel-control-prev-icon"
  aria-hidden="true"
></span
><span style="visibility: hidden" class="visually-hidden">Foobar</span>;
"
`;
